# react-wasm-boilerplate

./: .gitignore  CMakeLists.txt  LICENSE  package-lock.json  package.json  tsconfig.json
public/: calc.wasm
src/: App.tsx  calc.cxx  calcNoBinding.cxx  index.tsx  matrixMultiply_TMP copy
src/feature/addNumberWithBindingFunc/: index.ts  logic.ts  view.tsx
src/feature/addNumberWithWASM/: logic.ts
src/wasm/: initalizeWASM.ts
